sass/_misc.scss
/** Footer **/

.footer-padder-s {
  margin-bottom: 5px;
}

/** Hero **/

.hero-head .image {
  max-width: 30rem;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2rem;
}

/** Main page navbar **/

.navbar.is-main {
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

/** Misc **/

.emoji {
  height: 1rem;
  width: auto;
}

.breadcrumb ul li:first-of-type {
  margin-top: 0.25em;
}

html {
  overflow-y: auto; // Seemingly removes the ghost scrollbar that appears if the html is not scrollable
}

